# is_even

./: .gitignore  Cargo.toml  Dockerfile  Procfile  README.md  Rocket.toml  docker-compose.yaml  fly.toml  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yaml
is_even/: __init__.py
src/: main.rs
