[tool.poetry]
name = "is-even"
version = "0.1.0"
description = "Yep"
authors = ["Alex Nørgaard <Umbra@AbstractUmbra.dev>"]
license = "The Unlicense"
readme = "README.md"
# packages = [{include = "is_even"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "*"
uvicorn = "*"

[tool.poetry.group.dev.dependencies]
ruff = "*"

[tool.ruff]
target-version = "py311"
line-length = 125
exclude = ["docs/extensions/*.py"]
select = [
    "C4",
    "F",
    "G",
    "I",
    "PTH",
    "RUF",
    "SIM",
    "TCH",
    "UP",
    "W",
    "PERF",
    "ANN",
]
ignore = [
    "F401",
    "F402",
    "F403",
    "F405",
    "PERF203",
    "RUF001",
    "RUF009",
    "SIM105",
    "UP034",
    "UP038",
    "ANN101",
    "ANN102",
    "ANN401",
]
[tool.ruff.isort]
split-on-trailing-comma = true
combine-as-imports = true

[tool.ruff.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false
parametrize-names-type = "csv"

[tool.ruff.flake8-quotes]
inline-quotes = "single"

[tool.pyright]
venvPath = "."
venv = ".venv/"
exclude = ["**/__pycache__", "docs/**/*.py", "tests/_update_payloads.py"]
include = ["hondana", "tests", "examples"]
useLibraryCodeForTypes = true
typeCheckingMode = "strict"
reportImportCycles = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
